[package]
name = "ecdh"
version = "0.1.0"
edition = "2021"

[dependencies]
concat-idents = "1.1.5"
steps = {path = "../../steps"}
elliptic_curve = {path = "../../math/elliptic_curve"}
modular = {path = "../../math/modular"}
big_num = {path = "../../math/big_num"}
numeric = {path = "../../traits/numeric"}
curves = {path = "../curves"}
wasm-bindgen = "0.2.99"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib", "rlib"]
